modify change password modal; modify dashboard due soon components; fix black text on dark mode add tasks.

--- a/src/client/components/Dashboard.css
+++ b/src/client/components/Dashboard.css
@@ -159,10 +159,12 @@ h2 {
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 14px;
+    margin-left: 15px;
 }
 
 .task-status {
     text-align: left;
+    margin-left: 20px;
 }
 
 /* Priority colors */
